--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "start": "react-scripts start",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "build": "npm install --legacy-peer-deps"
+    "build": "react-scripts build"
   },
   "eslintConfig": {
     "extends": [
