--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
 		"@fortawesome/react-fontawesome": "^0.2.2",
 		"@mui/material": "^6.1.6",
 		"@mui/x-data-grid": "^7.22.2",
+		"@mui/x-date-pickers": "^7.22.2",
 		"@testing-library/jest-dom": "^5.17.0",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
 		"@toolpad/core": "^0.7.0",
 		"axios": "^1.7.7",
+		"dayjs": "^1.11.13",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-icons": "^5.3.0",
