--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
 		"@testing-library/user-event": "^13.5.0",
 		"@toolpad/core": "^0.7.0",
 		"axios": "^1.7.7",
+		"chart.js": "^4.4.6",
 		"dayjs": "^1.11.13",
 		"react": "^18.2.0",
+		"react-chartjs-2": "^5.2.0",
 		"react-dom": "^18.2.0",
 		"react-icons": "^5.3.0",
 		"react-redux": "^8.0.2",
