fix ui homepage and detailPage

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"@fortawesome/free-solid-svg-icons": "^6.6.0",
 		"@fortawesome/react-fontawesome": "^0.2.2",
 		"@mui/material": "^6.1.6",
+		"@mui/utils": "^6.1.8",
 		"@mui/x-data-grid": "^7.22.2",
 		"@mui/x-date-pickers": "^7.22.2",
 		"@mui/x-date-pickers-pro": "^7.22.2",
